# mobc-mlops-ts-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
conf/: modeling.yaml  preprocess.yaml  train.yaml
data/: processed.dvc
mobc_mlops_ts_project/: infer.py  preprocess.py  train.py
