[tool.poetry]
name = "mobc-mlops-ts-project"
version = "0.1.0"
description = ""
authors = ["asvistunov <aleksandrsvistunov4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
darts = "^0.27.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
