[tool.poetry]
name = "mobc-mlops-ts-project"
version = "0.1.0"
description = ""
authors = ["asvistunov <aleksandrsvistunov4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
darts = "^0.27.1"
catboost = "^1.2.2"
hydra-core = "^1.3.2"
pre-commit = "^3.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
dvc = {extras = ["gdrive"], version = "^3.36.1"}
mlflow = "^2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
